--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ rvm:
   - 2.2.2
 addons:
   postgresql: "9.4"
+cache: bundler
 before_script:
-  - psql -c 'create database travis_ci_test;' -U postgres
+  - createdb travis_ci_test
 env:
   - REDSHIFT_URL="redshift://postgres@localhost/travis_ci_test"
-before_install: gem install bundler -v 1.10.5
+script: bundle exec rake spec
