--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ cache: bundler
 before_script:
   - createdb travis_ci_test
 env:
-  - REDSHIFT_URL="redshift://postgres@localhost/travis_ci_test"
+  - REDSHIFT_URL="redshift://postgres@localhost:5432/travis_ci_test"
 script: bundle exec rake spec
